:space_invader: fixed widths and line breaks in search sidebar

--- a/components/SearchComponents/MainContent/MainContent.css
+++ b/components/SearchComponents/MainContent/MainContent.css
@@ -50,6 +50,5 @@
   }
 
   @media (min-width: mediumRem) {
-    flex-basis: 25%;
   }
 }
